--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
             <div class="profile-image"></div>
             <div class="profile-text">
                <h2>Creative Mind, Lines of Code: The Transformative World of Programming<span class="blinking-circle" style="color: rgb(254, 189, 3); font-size: 40px;"></span></h2>
-               <p><span style="color: rgb(254, 189, 3); font-size: 20px;">"</span>Graduated in law, passionate about programming. I traded law for code and found my true calling. 
-                  With curious eyes and an analytical mind, I immersed myself in the world of programming, turning challenges into achievements. I bring the confidence of the courtroom 
-                  to the universe of algorithms, determined to create digital solutions that make a difference.<span style="color: rgb(254, 189, 3); font-size: 20px;">"</span>
+               <p><span style="color: rgb(254, 189, 3); font-size: 20px;">"</span>I graduated from law school, passionate about programming. I left the legal field behind and found my true calling in code. With curious eyes and an analytical mind, I delved into the universe of programming, turning obstacles into achievements, committed to creating digital solutions that make a difference.<span style="color: rgb(254, 189, 3); font-size: 20px;">"</span>
                </p>
             </div>
          </div>
@@ -34,7 +32,7 @@
          <div class="courses-container">
             <h2>Education<span class="blinking-circle" style="color: rgb(254, 189, 3); font-size: 40px;"></span></h2>
             <ul>
-               <li><span class="circle"></span> Didática Tech - Combo 4 Módulos Machine Learning Com Python</li>
+               <li><span class="circle"></span> Didática Tech - Combo 4 Módulos Machine Learning Com Python (in progress)</li>
                <li><span class="circle"></span> Matheus Fraga - Git e Github do zero ao avançado</li>
                <li><span class="circle"></span> Jon Krohn - Calculus for Machine Learning</li>
                <li><span class="circle"></span> Jon Krohn - Linear Algebra for Machine Learning</li>
@@ -46,7 +44,7 @@
                <li><span class="circle"></span> Stack Academy - Full Stack Data Science</li>
                <li><span class="circle"></span> DSA - Big Data Real-Time Analytics com Python e Spark</li>
                <li><span class="circle"></span> Hashtag Treinamentos - Python Impressionador</li>
-	       <li><span class="circle"></span> Uniritter - Direito</li>
+               <li><span class="circle"></span> Uniritter - Direito</li>
             </ul>
             <div class="logos-container">
                <div class="logo-static" style="background-image: url('img/logo-education/python.png');"></div>
@@ -71,7 +69,7 @@
                         <img src="img/logo-projects/house.png" alt="Ícone de House Prices">
                      </div>
                   </a>
-                  <p >House Prices - Advanced Regression Techniques</p>
+                  <p >House Prices Prediction</p>
                </div>
                <div class="project">
                   <a href="https://www.kaggle.com/hensiq/breast-cancer-detection" target="_blank">
@@ -87,7 +85,7 @@
                         <img src="img/logo-projects/rpa.png" alt="Ícone de RPA - PyAutoGui">
                      </div>
                   </a>
-                  <p>RPA - PyAutoGui</p>
+                  <p>RPA (Robotic process automation)</p>
                </div>
             </div>
             <div class="projects">
@@ -107,7 +105,7 @@
             <div class="contact-line">Follow me on Medium<span class="blinking-circle" style="color: rgb(254, 189, 3); font-size: 40px;"></span></div>
             <div class="info-line">
                <span style="color: rgb(254, 189, 3); font-size: 20px;">"</span>
-               Explore the programming world with me! Come follow my experiences on Medium. Let's unravel the secrets of machine learning, linear algebra, and the mathematics behind the lines of code. Together, we'll create something amazing in this digital universe!
+               Come follow my experiences on Medium. Let's unravel the secrets of machine learning, linear algebra, and the mathematics behind the lines of code. Together, we'll create something amazing in this digital universe!
                <span style="color: rgb(254, 189, 3); font-size: 20px;">"</span>
                <br>
                Click on the <strong style="color: rgb(254, 189, 3);">M</strong> below.
